--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "cache-manager": "^6.4.0",
     "cache-manager-redis-store": "^2.0.0",
     "ioredis": "^5.5.0",
+    "kafka": "^0.2.3",
+    "kafkajs": "^2.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.3",
