--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.1",
     "cache-manager": "^6.4.0",
     "cache-manager-redis-store": "^2.0.0",
+    "cors": "^2.8.5",
     "ioredis": "^5.5.0",
     "kafka": "^0.2.3",
     "kafkajs": "^2.2.4",
